--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -105,43 +105,15 @@
 			</div>
 		</section>
 		<section class="sort-cont wow fadeInUp center animated" data-wow-delay="0.2s" id="bannerSwiper">
-			<ul>
-				<li><a href=""><p class="lanse"><i class="biticon biticon-relation"></i></p><h1>区块链</h1></a></li>
-				<li><a href=""><p class="fense"><i class="biticon biticon-youxi1"></i></p><h1>游戏开发</h1></a></li>
-				<li><a href=""><p class="lvse"><i class="biticon biticon-shouji"></i></p><h1>APP微信</h1></a></li>
-				<li><a href=""><p class="chengse"><i class="biticon biticon-meiyuandollar155"></i></p><h1>金融软件</h1></a></li>
-			</ul>
-		</section>
-		<section class="business-cont" id="bannerSwiper">
 			<div class="tiele-cont wow fadeInUp center animated" data-wow-delay="0.1s">
-				<h2 class="huise">主营业务<span><i></i>Main business</span></h2>
+				<h2 class="baise">主营业务<span><i></i>Main business</span></h2>
 				<div class="zhongx"></div>
 			</div>
-			<ul class="business_list">
-				<li class="wow fadeInUp center animated" data-wow-delay="0.2s">
-					<a href="">
-						<h1><i class="biticon biticon-deploymentunit"></i><b></b>区块链<span>查看详情》</span></h1>
-						<p>区块链是分布式数据存储、点对点传输、共识机制、加密算法等计算机技术的新型应用模式。</p>
-					</a>
-				</li>
-				<li class="wow fadeInUp center animated" data-wow-delay="0.3s">
-					<a href="">
-						<h1><i class="biticon biticon-gameshield"></i><b></b>游戏开发<span>查看详情》</span></h1>
-						<p>手机游戏开发指专门制作和开发手机游戏。它的处理能力与台式机的标准处理能力相比很有限，但是足够运行一个小型的游戏。</p>
-					</a>
-				</li>
-				<li class="wow fadeInUp center animated" data-wow-delay="0.4s">
-					<a href="">
-						<h1><i class="biticon biticon-app"></i><b></b>APP微信<span>查看详情》</span></h1>
-						<p>手机APP应用软件制作和微信公众号、小程序开发，拥有一支热情专业的开发团队，用户的诉求就是恋比特的追求。</p>
-					</a>
-				</li>
-				<li class="wow fadeInUp center animated" data-wow-delay="0.5s">
-					<a href="">
-						<h1><i class="biticon biticon-jiaoyiguanli"></i><b></b>金融软件<span>查看详情》</span></h1>
-						<p>金融指货币的发行、流通和回笼，贷款的发放和收回，存款的存入和提取，汇兑的往来等经济活动。</p>
-					</a>
-				</li>
+			<ul>
+				<li><a href=""><p><img src="img/business_01.png"></p><h1>区块链</h1></a></li>
+				<li><a href=""><p><img src="img/business_02.png"></p><h1>游戏开发</h1></a></li>
+				<li><a href=""><p><img src="img/business_03.png"></p><h1>APP微信</h1></a></li>
+				<li><a href=""><p><img src="img/business_04.png"></p><h1>金融软件</h1></a></li>
 			</ul>
 		</section>
 		<section class="product-cont wow fadeInUp center animated" data-wow-delay="0.1s" id="bannerSwiper">
@@ -241,7 +213,31 @@
 			</ul>
 			<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
 		</section>
-		<footer class="contact-cont wow fadeInUp center animated" data-wow-delay="0.14s" id="bannerSwiper">
+		<section class="liuyanban">
+			<div class="tiele-cont">
+				<h2 class="baise">在线留言<span><i></i>Online Message</span></h2>
+				<div class="zhongx"></div>
+			</div>
+			<form id="mess_form">
+                <fieldset class="message_board">
+                    <p class="mb_div">
+                        <label class="mynamel">姓名:</label>
+                        <input maxlength="5" id="mes_user"  required="姓名必填！！！"  placeholder="请输入您的姓名" type="text" name="mes_user" autocomplete="off">
+                    </p>
+                    <p class="mb_div">
+                        <label class="myphonel">电话:</label>
+                        <input maxlength="11" id="mes_phone" placeholder="请输入您的电话" type="text" name="mes_phone" autocomplete="off">
+                    </p>
+                    <p class="mb_div">
+                        <textarea maxlength="200" id="mes_content" required  name="mes_content" placeholder="请输入您的留言内容"></textarea>
+                    </p>
+                    <p class="mb_div">
+                        <button  type="button" onclick="comment()">提交留言</button>
+                    </p>
+                </fieldset>
+            </form>
+		</section>
+		<!-- <footer class="contact-cont wow fadeInUp center animated" data-wow-delay="0.14s" id="bannerSwiper">
 			<div class="tiele-cont">
 				<h2 class="baise">联系我们<span><i></i>Contact us</span></h2>
 				<div class="zhongx"></div>
@@ -252,7 +248,7 @@
 				<p>公司名称：恋比特国际科技发展(北京)有限责任公司</p>
 				<p>办公地址：北京市朝阳区建国门外大街甲6号D座28层</p>
 			</div>
-		</footer>
+		</footer> -->
 		
 	</div>
 	<script src="js/jquery-3.2.1.min.js"></script>
