--- a/lbtMobile/News.html
+++ b/lbtMobile/News.html
@@ -62,7 +62,7 @@
 				<a href="Quality_service.html"><i class="nav-icon  biticon biticon-xihuan"></i><span>品质服务</span></a>
 			</li>
 			<li class="nav-list">
-				<a href=""><i class="nav-icon  biticon biticon-yonghuming"></i><span>关于我们</span></a>
+				<a href="about_us.html"><i class="nav-icon  biticon biticon-yonghuming"></i><span>关于我们</span></a>
 			</li>
 			<li class="nav-list">
 				<a href="News.html"><i class="nav-icon  biticon biticon-liebiaodaohang_zixun"></i><span>行业咨讯</span></a>
@@ -74,7 +74,7 @@
 				<li><a href=""><p><i class="footer-icon biticon biticon-htmal5icon06"></i></p><span>返回首页</span></a></li>
 				<li><a href=""><p><i class="footer-icon biticon biticon-tubiao313"></i></p><span>在线沟通</span></a></li>
 				<li><a href="tel:400-109-3531"><p><i class="footer-icon biticon biticon-dianhuaguhua"></i></p><span>电话咨询</span></a></li>
-				<li><a href=""><p><i class="footer-icon biticon biticon-guanyuwomen1"></i></p><span>关于我们</span></a></li>
+				<li><a href="about_us.html"><p><i class="footer-icon biticon biticon-guanyuwomen1"></i></p><span>关于我们</span></a></li>
 			</ul>
 		</section>
 		<!-- 底部导航 //-->
