--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -121,28 +121,90 @@
 				<h2 class="baise">特色产品<span><i></i>Characteristic product</span></h2>
 				<div class="zhongx"></div>
 			</div>
-			<div class="product_tab shenqi1 wow fadeInRight center animated" data-wow-delay="0.2s">
-				<a class="shenqi2 rightB hover_tab" href="">区块链</a>
-				<a class="shenqi2 rightB" href="">小游戏</a>
-				<a class="shenqi2 rightB" href="">特色棋牌</a>
-				<a class="shenqi2 rightB" href="">金融软件</a>
-				<a class="shenqi2" href="">APP微信</a>
+			<div id="jiShu" class="product_tab shenqi1 wow fadeInRight center animated" data-wow-delay="0.2s">
+				<a class="shenqi2 rightB jishu_hover">区块链开发</a>
+				<a class="shenqi2 rightB">区块链服务</a>
+				<a class="shenqi2 rightB">H5游戏</a>
+				<a class="shenqi2 rightB">棋牌游戏</a>
+				<a class="shenqi2">APP微信</a>
 			</div>
-			<ul class="product_list">
-				<li class="wow fadeInUp center animated" data-wow-delay="0.3s">
-					<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
-				</li>
-				<li class="wow fadeInUp center animated" data-wow-delay="0.35s">
-					<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
-				</li>
-				<li class="wow fadeInUp center animated" data-wow-delay="0.4s">
-					<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
-				</li>
-				<li class="wow fadeInUp center animated" data-wow-delay="0.45s">
-					<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
-				</li>
-			</ul>
-			<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
+			<div id="jishuTab" class="jishutab">
+				<ul class="product_list jishubox">
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
+					</li>
+					<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
+				</ul>
+				<ul class="product_list jishubox">
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
+					</li>
+					<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
+				</ul>
+				<ul class="product_list jishubox">
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
+					</li>
+					<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
+				</ul>
+				<ul class="product_list jishubox">
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
+					</li>
+					<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
+				</ul>
+				<ul class="product_list jishubox">
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
+					</li>
+					<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
+				</ul>
+			</div>
 		</section>
 		<section class="news-cont" id="bannerSwiper">
 			<div class="tiele-cont">
