--- a/lbtMobile/home.html
+++ b/lbtMobile/home.html
@@ -13,7 +13,7 @@
 	<link href="font-icon/iconfont.css" type="text/css" rel="stylesheet" media="all"> 
 	<link href="css/swiper.css" type="text/css" rel="stylesheet" media="all"> 
 	<link href="css/public.css" type="text/css" rel="stylesheet" media="all">
-	<link href="css/index.css" type="text/css" rel="stylesheet" media="all"> 
+	<link href="css/home.css" type="text/css" rel="stylesheet" media="all"> 
 </head>
 <body>
 	<!-- 头部导航 -->
@@ -31,7 +31,7 @@
 				<a href="javascript:;"><i class="nav-icon biticon biticon-shouye"></i><span>首页</span></a>
 			</li>
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon biticon biticon-wangluo"></i><span>区块链</span><i class="btniconr biticon biticon-right"></i></a>
+				<a href="javascript:;"><i class="nav-icon biticon biticon-wangluo"></i><span>区块链</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
 					<li><a href=""><span>区块链技术开发</span></a></li>
 					<li><a href=""><span>区块链项目服务</span></a></li>
@@ -39,7 +39,7 @@
 				</ul>
 			</li>
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon  biticon biticon-youxi"></i><span>游戏开发</span><i class="btniconr biticon biticon-right"></i></a>
+				<a href="javascript:;"><i class="nav-icon  biticon biticon-youxi"></i><span>游戏开发</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
 					<li><a href=""><span>棋牌游戏</span></a></li>
 					<li><a href=""><span>H5游戏</span></a></li>
@@ -47,7 +47,7 @@
 				</ul>
 			</li>
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon  biticon biticon-shouji1"></i><span>APP微信开发</span><i class="btniconr biticon biticon-right"></i></a>
+				<a href="javascript:;"><i class="nav-icon  biticon biticon-shouji1"></i><span>APP微信开发</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
 					<li><a href=""><span>APP开发</span></a></li>
 					<li><a href=""><span>微信开发</span></a></li>
@@ -81,49 +81,28 @@
 	<div id="hideNavCont"></div>
 	<!-- 头部导航// -->
 	<div class="main">
-		<section class="Head_animation">
-			<img src="img/index_img6.png" class="lineBg">
-			<img src="img/index_img1.png" class="rollIn animated busimg_1">
-			<img src="img/index_img2.png" class="zoomInDown animated busimg_2">
-			<img src="img/index_img3.png" class="tada animated busimg_3">
-			<img src="img/index_img4.png" class="fadeInDown animated busimg_4">
-			<div class="Head_aTitle">
-				<h1>十多年专注互联网<br />开发与服务</h1>
-				<p>您的最佳合作伙伴</p>
-				<a href="" class="Head_aBtn">获得您的专属方案 </a>
-			</div>
-			<img src="img/index_img5.png" class="btm_img1">
-		</section>
-		<section id="homeBanner" class="home_banner wow fadeInUp center animated" data-wow-delay="0.1s" id="bannerSwiper">
-			<div class="tiele-cont wow fadeInUp center animated" data-wow-delay="0.1s">
-				<h2><span>主营业务</span></h2>
-				<h3>MAIN BUSINESS</h3>
-			</div>
+		<section class="banner-swiper wow fadeInUp center animated" data-wow-delay="0.1s" id="bannerSwiper">
 			<div class="swiper-container">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<a href=""><img src="img/banner_01.png"></a>
-						<p>恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
 					</div>
 					<div class="swiper-slide">
-						<a href=""><img src="img/banner_01.png"></a>
-						<p>2恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
+						<a href=""><img src="img/banner_02.png"></a>
 					</div>
 					<div class="swiper-slide">
-						<a href=""><img src="img/banner_01.png"></a>
-						<p>3恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
+						<a href=""><img src="img/banner_03.png"></a>
 					</div>
 					<div class="swiper-slide">
-						<a href=""><img src="img/banner_01.png"></a>
-						<p>4恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
+						<a href=""><img src="img/banner_04.png"></a>
+					</div>
+					<div class="swiper-slide">
+						<a href=""><img src="img/banner_05.png"></a>
 					</div>
 				</div>
 				<!-- Add Pagination -->
 				<div class="swiper-pagination"></div>
-			    <div class="swiper-button-next"><i class="biticon biticon-right"></i></div>
-				<div class="swiper-button-prev"><i class="biticon biticon-left"></i></div>
 			</div>
-			<div class="hbmoer"><a href="">查看更多》</a></div>
 		</section>
 		<section class="sort-cont wow fadeInUp center animated" data-wow-delay="0.2s" id="bannerSwiper">
 			<div class="tiele-cont wow fadeInUp center animated" data-wow-delay="0.1s">
@@ -338,15 +317,5 @@
 	<script src="js/wow.min.js"></script>
 	<script src="js/swiper.js"></script>
 	<script src="js/main.js"></script>
-	<script>
-
-		$(function(){
-			var navHeight = $(".nav_btn").height();
-			var mHeight = $(window).height();
-			var Head_aHeight = mHeight - navHeight;
-			$(".Head_animation").css("height",Head_aHeight);
-			// $('#nav-box').onePageNav();
-		});
-		</script>
 </body>
 </html>
