--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -103,19 +103,19 @@
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<a href=""><img src="img/banner_01.png"></a>
-						<p>恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
+						<p class="text" data-swiper-parallax="-200">恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
 					</div>
 					<div class="swiper-slide">
 						<a href=""><img src="img/banner_01.png"></a>
-						<p>2恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
+						<p class="text" data-swiper-parallax="-200">2恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
 					</div>
 					<div class="swiper-slide">
 						<a href=""><img src="img/banner_01.png"></a>
-						<p>3恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
+						<p class="text" data-swiper-parallax="-200">3恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
 					</div>
 					<div class="swiper-slide">
 						<a href=""><img src="img/banner_01.png"></a>
-						<p>4恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
+						<p class="text" data-swiper-parallax="-200">4恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
 					</div>
 				</div>
 				<!-- Add Pagination -->
