--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -94,7 +94,7 @@
 			</div>
 			<img src="img/index_img5.png" class="btm_img1">
 		</section>
-		<section id="homeBanner" class="home_banner wow fadeInUp center animated" data-wow-delay="0.1s" id="bannerSwiper">
+		<section id="homeBanner" class="home_banner wow fadeInUp center animated" data-wow-delay="0.1s">
 			<div class="tiele-cont wow fadeInUp center animated" data-wow-delay="0.1s">
 				<h2><span>主营业务</span></h2>
 				<h3>MAIN BUSINESS</h3>
@@ -102,19 +102,19 @@
 			<div class="swiper-container">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<a href=""><img src="img/banner_01.png"></a>
+						<a href=""><img src="img/homeb_01.png"></a>
 						<p class="text" data-swiper-parallax="-200">恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
 					</div>
 					<div class="swiper-slide">
-						<a href=""><img src="img/banner_01.png"></a>
+						<a href=""><img src="img/homeb_01.png"></a>
 						<p class="text" data-swiper-parallax="-200">2恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
 					</div>
 					<div class="swiper-slide">
-						<a href=""><img src="img/banner_01.png"></a>
+						<a href=""><img src="img/homeb_01.png"></a>
 						<p class="text" data-swiper-parallax="-200">3恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
 					</div>
 					<div class="swiper-slide">
-						<a href=""><img src="img/banner_01.png"></a>
+						<a href=""><img src="img/homeb_01.png"></a>
 						<p class="text" data-swiper-parallax="-200">4恋比特多年专注于棋牌游戏的开发定制，技术资质雄厚的开发团队为您提供棋牌游戏多种开发模式。</p>
 					</div>
 				</div>
@@ -125,112 +125,185 @@
 				<div class="hbmoer"><a href="">查看更多》</a></div>
 			</div>
 		</section>
-		<section class="sort-cont wow fadeInUp center animated" data-wow-delay="0.2s" id="bannerSwiper">
+		<section class="product-cont wow fadeInUp center animated" data-wow-delay="0.2s">
 			<div class="tiele-cont wow fadeInUp center animated" data-wow-delay="0.1s">
-				<h2 class="baise">主营业务<span><i></i>Main business</span></h2>
-				<div class="zhongx"></div>
+				<h2><span>特色案例</span></h2>
+				<h3>SERVICE PROCESS</h3>
 			</div>
-			<ul>
-				<li><a href=""><p><img src="img/business_01.png"></p><h1>区块链</h1></a></li>
-				<li><a href=""><p><img src="img/business_02.png"></p><h1>游戏开发</h1></a></li>
-				<li><a href=""><p><img src="img/business_03.png"></p><h1>APP微信</h1></a></li>
-				<li><a href=""><p><img src="img/business_04.png"></p><h1>金融软件</h1></a></li>
+			<div id="jiShu" class="product_tab wow fadeInRight center animated" data-wow-delay="0.2s">
+				<a class="jishu_hover"><p><img src="img/business_01.png"></p><h1 class="jishu_01">区块链</h1></a>
+				<a><p><img src="img/business_02.png"></p><h1 class="jishu_02">游戏开发</h1></a>
+				<a><p><img src="img/business_03.png"></p><h1 class="jishu_03">APP微信</h1></a>
+				<a><p><img src="img/business_04.png"></p><h1 class="jishu_04">金融软件</h1></a>
+			</div>
+			<div id="jishuTab" class="jishutab wow fadeInUp center animated" data-wow-delay="0.2s">
+				<ul class="product_list jishubox">
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
+					</li>
+					<p class="product_more wow fadeInUp center animated" data-wow-delay="0.2s"><a href="">
+						<i></i><i></i><i></i><i></i>
+						<span>查看更多》</span></a>
+					</p>
+				</ul>
+				<ul class="product_list jishubox">
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
+					</li>
+					<p class="product_more wow fadeInUp center animated" data-wow-delay="0.2s"><a href="">
+						<i></i><i></i><i></i><i></i>
+						<span>查看更多》</span></a>
+					</p>
+				</ul>
+				<ul class="product_list jishubox">
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
+					</li>
+					<p class="product_more wow fadeInUp center animated" data-wow-delay="0.2s"><a href="">
+						<i></i><i></i><i></i><i></i>
+						<span>查看更多》</span></a>
+					</p>
+				</ul>
+				<ul class="product_list jishubox">
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
+					</li>
+					<p class="product_more wow fadeInUp center animated" data-wow-delay="0.2s"><a href="">
+						<i></i><i></i><i></i><i></i>
+						<span>查看更多》</span></a>
+					</p>
+				</ul>
+				<ul class="product_list jishubox">
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
+					</li>
+					<li>
+						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
+					</li>
+					<p class="product_more wow fadeInUp center animated" data-wow-delay="0.2s"><a href="">
+						<i></i><i></i><i></i><i></i>
+						<span>查看更多》</span></a>
+					</p>
+				</ul>
+			</div>
+		</section>
+		<section class="product-cont wow fadeInUp center animated" data-wow-delay="0.1s">
+			<div class="tiele-cont wow fadeInUp center animated" data-wow-delay="0.1s">
+				<h2><span>服务流程</span></h2>
+				<h3>SERVICE PROCESS</h3>
+			</div>
+			<ul class="fwlc_list">
+				<li class="wow fadeInUp center animated" data-wow-delay="0.1s">
+					<div class="fqlist_left"><img src="img/fwlc_img1.png"></div>
+					<div class="fqlist_right">
+						<h2>1、签订合同</h2>
+						<p>与客户签订合同、项目周期、项目价格、保密协议</p>
+					</div>
+				</li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.1s">
+					<div class="fqlist_left"><img src="img/fwlc_img2.png"></div>
+					<div class="fqlist_right">
+						<h2>2、双方沟通</h2>
+						<p>需求完善、确认功能、产品理念</p>
+					</div>
+				</li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.1s">
+					<div class="fqlist_left"><img src="img/fwlc_img3.png"></div>
+					<div class="fqlist_right">
+						<h2>3、项目启动</h2>
+						<p>组织产品经理、UI/UE设计师、开发工程师等、人员发起项目启动会组建项目团队</p>
+					</div>
+				</li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.1s">
+					<div class="fqlist_left"><img src="img/fwlc_img4.png"></div>
+					<div class="fqlist_right">
+						<h2>4、产品原型</h2>
+						<p>制作产品原型图与客户确认、由项目经理同程参与把控进度</p>
+					</div>
+				</li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.1s">
+					<div class="fqlist_left"><img src="img/fwlc_img5.png"></div>
+					<div class="fqlist_right">
+						<h2>5、视觉图</h2>
+						<p>设计高保真视觉图与客户确认、由项目经理同程参与把控进度</p>
+					</div>
+				</li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.1s">
+					<div class="fqlist_left"><img src="img/fwlc_img6.png"></div>
+					<div class="fqlist_right">
+						<h2>6、研发</h2>
+						<p>根据已确认的、客户需求及高保真视觉图进行开发安排代码编写</p>
+					</div>
+				</li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.1s">
+					<div class="fqlist_left"><img src="img/fwlc_img7.png"></div>
+					<div class="fqlist_right">
+						<h2>7、测试</h2>
+						<p>多次测试编写测试用例，把测试结果反馈给研发</p>
+					</div>
+				</li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.1s">
+					<div class="fqlist_left"><img src="img/fwlc_img8.png"></div>
+					<div class="fqlist_right">
+						<h2>8、验收</h2>
+						<p>提供最终产品包给客户验收</p>
+					</div>
+				</li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.1s">
+					<div class="fqlist_left"><img src="img/fwlc_img9.png"></div>
+					<div class="fqlist_right">
+						<h2>9、上线</h2>
+						<p>人员培训、技术支持、发布上线、运营维护</p>
+					</div>
+				</li>
 			</ul>
 		</section>
-		<section class="product-cont wow fadeInUp center animated" data-wow-delay="0.1s" id="bannerSwiper">
-			<div class="tiele-cont">
-				<h2 class="baise">特色产品<span><i></i>Characteristic product</span></h2>
-				<div class="zhongx"></div>
-			</div>
-			<div id="jiShu" class="product_tab shenqi1 wow fadeInRight center animated" data-wow-delay="0.2s">
-				<a class="shenqi2 rightB jishu_hover">区块链开发</a>
-				<a class="shenqi2 rightB">区块链服务</a>
-				<a class="shenqi2 rightB">H5游戏</a>
-				<a class="shenqi2 rightB">棋牌游戏</a>
-				<a class="shenqi2">APP微信</a>
-			</div>
-			<div id="jishuTab" class="jishutab">
-				<ul class="product_list jishubox">
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
-					</li>
-					<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
-				</ul>
-				<ul class="product_list jishubox">
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
-					</li>
-					<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
-				</ul>
-				<ul class="product_list jishubox">
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
-					</li>
-					<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
-				</ul>
-				<ul class="product_list jishubox">
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
-					</li>
-					<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
-				</ul>
-				<ul class="product_list jishubox">
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
-					</li>
-					<li>
-						<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
-					</li>
-					<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
-				</ul>
-			</div>
-		</section>
-		<section class="news-cont" id="bannerSwiper">
-			<div class="tiele-cont">
-				<h2 class="huise">新闻资讯<span><i></i>News and information</span></h2>
-				<div class="zhongx"></div>
+		<section class="news-cont">
+			<div class="tiele-cont wow fadeInUp center animated" data-wow-delay="0.1s">
+				<h2><span>新闻资讯</span></h2>
+				<h3>NEWS AND INFORMATION</h3>
 			</div>
 			<ul class="news_list">
 				<li class="wow fadeInUp center animated" data-wow-delay="0.1s">
@@ -294,12 +367,15 @@
 					</a>
 				</li>
 			</ul>
-			<div class="product_more wow fadeInRight center animated" data-wow-delay="0.2s"><a href="">MORE+</a></div>
+			<p class="product_more wow fadeInUp center animated" data-wow-delay="0.2s"><a href="">
+				<i></i><i></i><i></i><i></i>
+				<span>查看更多》</span></a>
+			</p>
 		</section>
 		<section class="liuyanban">
-			<div class="tiele-cont">
-				<h2 class="baise">在线留言<span><i></i>Online Message</span></h2>
-				<div class="zhongx"></div>
+			<div class="tiele-cont wow fadeInUp center animated" data-wow-delay="0.1s">
+				<h2><span>在线留言</span></h2>
+				<h3>ONLINE MESSAGE</h3>
 			</div>
 			<form id="mess_form">
                 <fieldset class="message_board">
