--- a/lbtMobile/News.html
+++ b/lbtMobile/News.html
@@ -13,7 +13,7 @@
 	<link href="font-icon/iconfont.css" type="text/css" rel="stylesheet" media="all"> 
 	<link href="css/swiper.css" type="text/css" rel="stylesheet" media="all"> 
 	<link href="css/public.css" type="text/css" rel="stylesheet" media="all">
-	<link href="css/home.css" type="text/css" rel="stylesheet" media="all"> 
+	<link href="css/index.css" type="text/css" rel="stylesheet" media="all"> 
 </head>
 <body>
 	<!-- 头部导航 -->
